--- a/inicio/index.html
+++ b/inicio/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coursera</title>
+    <title>David Chu's Chine Bistro</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    hello coursera!
+    
+
+    <script src="js/script.js"></script>
 </body>
 </html>
