--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Chu's Chine Bistro</title>
@@ -8,12 +12,30 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div id="container">
+                <div class="navbar-header">
+                    <a href="index.html" class="pull-letf visible-md">
+                        <div id="logo-img" alt="gato dormindo com ursinho de pelúcia"></div>
+                    </a>
 
+                    <div class="navbar-brand"><!--nav-brand- marca do nome da empresa-->
+                    <a href="index.html"> <h1>Vida de Gato</h1></a>
+                    <p>
+                        <img src="img/favicon.jpg" width="20px">
+                        <span>pilarpsico</span>
+                    </p></div>
+                </div>
+         </div>
+        </nav>
+    </header>
 
     
     
     <script src="./bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-    <script src="./js/jquery-3.7.1.min.map"></script>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
