--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Chu's Chine Bistro</title>
-    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div id="container">
                 <div class="navbar-header">
-                    <a href="index.html" class="pull-letf visible-md">
+                    <a href="index.html" class="pull-letf visible-md visible-lg>
                         <div id="logo-img" alt="gato dormindo com ursinho de pelúcia"></div>
                     </a>
 
